--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,66 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
+
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: 'Roboto', sans-serif;
+}
+
 .App {
-  text-align: center;
+    height: 100px;
+    margin: 20px 60px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+img {
+    width: 100%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.row {
+    width: 100%;
+    max-width: 1100px;
+    margin: 0 auto;
+    border-bottom: 2px solid grey;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+button {
+    cursor: pointer;
 }
 
-.App-link {
-  color: #61dafb;
+.nav__login {
+    display: flex;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.btn {
+    font-size: 16px;
+    font-weight: 500;
+    padding: 12px 24px;
+    margin: 12px;
+    border: none;
+}
+
+.btn--color {
+    background-color: #7645D9;
+    color: white;
+}
+
+.login {
+    padding: 12px 20px 12px 20px;
+    border-radius: 50%;
+    color: white;
+    font-size: 24px;
+}
+
+figure {
+    width: 200px;
+}
+
+.skeleton {
+    background-color: rgba(224, 224, 224, 0.7);
+    width: 100px;
+    height: 50px;
+    margin: 16px;
 }
